# prism

./: .gitignore  README.md  dashboard.html  dashboard_live.html  prism_paper_draft.md  pyproject.toml  site-packages
configs/: config.yaml  config_dev.yaml
prism/arbitration/: core.py
prism/carla_bridge/: __init__.py  bridge.py
prism/new data/lidarPreProcess/: CMakeLists.txt  package.xml
prism/new data/lidarPreProcess/launch/: lidarPre.launch.py
prism/new data/lidarPreProcess/src/: EuclideanClusters.cpp  boundingBox.cpp  lidarGroundRemove.cpp  lidarVoxel.cpp  sorFilter.cpp
prism/new data/ros2_bag/: metadata.yaml
prism/new data/test1/: metadata.yaml
prism/planner/: __init__.py  planner.py
prism/predictive_engine/: decision.py  engine.py  lstm_intent.py  vlm_scene_monitor.py
prism/semantic_reasoner/: reasoner.py
prism/sensory_core/: core.py  core_threaded_backup.py  data_loader.py  lidar_processor.py  metric_depth.py  ros2_bag_loader.py
prism/utils/: common.py
prism/viz/: __init__.py  dashboard.py
prism/world_model/: bev_grid.py  tracker.py  world_model.py
scripts/: auto_annotate_safety.py  benchmark_vlm_latency.py  build_engine.py  check_cv2.py  check_ray_calibration.py  debug_vlm_thread.py  download_vlm.py  eval_lstm_intent.py  eval_vlm.py  eval_vlm_compare.py  eval_vlm_cot.py  eval_vlm_single.py  export_tensorrt.py  extract_frames.py  extract_profiling.py  finetune_vlm.py  fix_cv2.sh  generate_synthetic.py  inspect_bags.py  prepare_bdd100k.py  print_profiling_summary.sh  profile_pipeline.py  run_bag_dashboard.py  run_benchmark.py  run_carla_eval.py  run_closedloop_eval.py  run_predictive.py  run_profiling.sh  run_ros2_eval.py  run_sensory_core.py  run_trt_benchmark.sh  run_vlm_bags.sh  run_world_model.py  setup_carla.sh  simulate_ablation.py  stream_server.py  test_arbitration.py  test_planner.py  train_lstm_intent.py  verify_vlm.py
