[project]
name = "prism"
version = "0.1.0"
description = "Predictive Reasoning and Intuition System for Mobility"
requires-python = ">=3.11"
dependencies = [
    "torch",
    "torchvision",
    "torchaudio",
    "ultralytics",
    "transformers",
    "accelerate",
    "opencv-python",
    "pillow",
    "numpy",
    "scipy",
    "matplotlib",
    "einops",
    "timm",
    "huggingface-hub",
    "datasets",
    "pyyaml",
    "nuscenes-devkit",
    "wandb",
    "jupyter",
    "ipykernel",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["prism"]
